// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render with children props as snapshot 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters css-1xtwiqb-MuiListItem-root"
  disabled={false}
>
  <div
    className="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="HomeIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
      />
    </svg>
  </div>
  <div>
    toto
  </div>
</li>
`;

exports[`should render with text props as snapshot 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters css-1xtwiqb-MuiListItem-root"
  disabled={false}
>
  <div
    className="MuiListItemIcon-root css-cveggr-MuiListItemIcon-root"
  >
    <svg
      aria-hidden={true}
      className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="HomeIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
      />
    </svg>
  </div>
  text
</li>
`;

exports[`should render without props as snapshot 1`] = `
<li
  className="MuiListItem-root MuiListItem-gutters css-1xtwiqb-MuiListItem-root"
  disabled={false}
/>
`;
